--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
             </p>
         
         </div>
+
+        <div class="beneficios"
+             <h3 class="titulo-centralizado"
+                        Benificios
+                   </h3>
+            <div/>
     </body>
 </html> 
